2009-04-01  Mark Rowe  <mrowe@apple.com>

        Windows support for built-product-archive.

        * BuildSlaveSupport/built-product-archive:

2009-03-31  Adam Roben  <aroben@apple.com>

        Make resolve-ChangeLogs -f work when the working tree has spaces in
        its path

        Reviewed by Mark Rowe and David Kilzer.

        * Scripts/resolve-ChangeLogs:
        (sub fixMergedChangeLogs): Quote the path to resolve-ChangeLogs in
        case it contains spaces.

2009-03-31  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24777
        WebKit tools are broken on Tiger

        * Scripts/webkitdirs.pm: Don't use arch command with options on Tiger.

2009-03-31  Darin Adler  <darin@apple.com>

        * Scripts/add-include: Added.

2009-03-31  Mark Rowe  <mrowe@apple.com>

        Fix use of incorrect constant.

        * BuildSlaveSupport/built-product-archive:

2009-03-30  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Stephanie Lewis.

        Add a script in support of the new build.webkit.org configuration.

        * BuildSlaveSupport/built-product-archive: Added.

2009-03-30  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Make policy-delegate logging work even for local files by processing the URLs as we
        do for other delegates.

        * DumpRenderTree/mac/PolicyDelegate.mm:
        (-[PolicyDelegate webView:decidePolicyForNavigationAction:request:frame:decisionListener:]):
        Use _drt_descriptionSuitableForTestResult on the URL.

        * DumpRenderTree/win/PolicyDelegate.cpp:
        (PolicyDelegate::decidePolicyForNavigationAction): Use urlSuitableForTestResult on the URL.

2009-03-30  Adam Roben  <aroben@apple.com>

        Windows build fix

        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::waitForPolicyDelegate): Added this empty stub.
